Increased aside cards z-index to ensure parallax container images don't obstruct them

--- a/src/components/asideCards/asideCards.module.scss
+++ b/src/components/asideCards/asideCards.module.scss
@@ -45,6 +45,7 @@
 
 .aside-cards {
   position: relative;
+  z-index: 5;
 
   &__controls {
     position: absolute;
